[gd_scene load_steps=7 format=3 uid="uid://e2x7gep6lcdt"]

[ext_resource type="Script" path="res://Anxiety Effects/Self Talk/interactable_word.gd" id="1_nxtku"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wp74p"]
size = Vector2(145, 35)

[sub_resource type="Animation" id="Animation_pf04l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hfy1u"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cf8sn"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mmm6m"]
_data = {
"RESET": SubResource("Animation_pf04l"),
"fade_in": SubResource("Animation_hfy1u"),
"fade_out": SubResource("Animation_cf8sn")
}

[node name="InteractableWord" type="Node2D"]
modulate = Color(1, 1, 1, 0)
script = ExtResource("1_nxtku")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -73.0
offset_top = -18.0
offset_right = 73.0
offset_bottom = 17.0
mouse_filter = 2
bbcode_enabled = true
text = "[center][shake rate=20.0 level=1.0 connected=1]I don't belong here............[/shake][/center]"
scroll_active = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_wp74p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mmm6m")
}

[connection signal="area_shape_entered" from="Area2D" to="." method="_word_touched"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
